--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ server.port=8082
 #spring.artemis.host=192.168.99.100
 spring.artemis.user=artemis
 spring.artemis.password=simetraehcapa
+
+logging.level.com.github.adetiamarhadi=debug
