Chapter 255 : Review Running Services Locally

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,6 @@ logging.level.com.github.adetiamarhadi=debug
 server.port=8082
 # defaults for this docker image - vromero/activemq-artemis
 ##turn on if you are using windows
-#spring.artemis.host=192.168.99.100
+spring.artemis.host=192.168.99.100
 spring.artemis.user=artemis
 spring.artemis.password=simetraehcapa
-
-logging.level.com.github.adetiamarhadi=debug
