--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,4 @@ server.port=8082
 #spring.artemis.host=localhost
 spring.artemis.user=artemis
 spring.artemis.password=simetraehcapa
-spring.zipkin.baseUrl= http://localhost:9411/
+spring.zipkin.enabled=false
