--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ server.port=8082
 spring.artemis.user=artemis
 spring.artemis.password=simetraehcapa
 spring.zipkin.enabled=false
+
+spring.security.user.name=good
+spring.security.user.password=beer
